2010-10-05  Martin Rubey  <martin.rubey@math.uni-hannover.de>

	* src/algebra/combfunc.spad.pamphlet,
	src/algebra/op.spad.pamphlet: hypergometric -> hypergeometric

2010-10-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/combfunc.spad.pamphlet,
	src/algebra/expr.spad.pamphlet,
	src/algebra/fspace.spad.pamphlet,
	src/algebra/op.spad.pamphlet,
	src/algebra/trigcat.spad.pamphlet: Add hypergeometric and Meijer
        functions.

2010-10-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/nruncomp.boot, src/interp/nrunfast.boot:
	Handle functions conditioned on %.

2010-10-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/liouv.spad.pamphlet: Fix dilog(1).

2010-09-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

        Fixes SF 2536411.
	* src/algebra/efstruc.spad.pamphlet,
	src/algebra/integrat.spad.pamphlet,
	src/algebra/liouv.spad.pamphlet,
	src/algebra/op.spad.pamphlet: Better normaliztion of
        Liouvillian functions.

2010-09-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/efstruc.spad.pamphlet,
	src/algebra/integrat.spad.pamphlet: Normalize trigonometric
	constants.

2010-09-23  Aleksej Saushev  <asau@inbox.ru>

	* src/hyper/Makefile.in, src/sman/Makefile.in,
	src/graph/viewman/Makefile.in, src/lib/Makefile.in,
	src/lisp/Makefile.in, src/clef/Makefile.in:
	Don't spread textual substitutions all over the text.


2010-09-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Bignums via gmp in sbcl.
	* num_sb.lisp, gmp_wrap.c: New files.
	src/interp/util.lisp, src/lisp/fricas-lisp.lisp: Call
	new functions.
        configure.ac, src/lib/Makefile.in, src/lisp/Makefile.in: Adjust.

2010-09-22  Gabriel Dos Reis  <gdr@cs.tamu.edu>
            patch identified by
	    Alfredo Portes  <doyenatccny@gmail.com>

	* src/interp/int-top.boot: Eliminate double prompt at
	startup.

2010-09-22  Aleksej Saushev  <asau@inbox.ru>

	* src/scripts/mkdist.sh: Simplify removal of ".svn"
	subdirectories.
